--- a/card.html
+++ b/card.html
@@ -12,11 +12,12 @@
 <!--Mother div-->
 <div class="mother">
     <!--logo-->
-    <img src="logo.png" alt="logo" height="40px" class="logo">
+
+    <img src="logo.png" alt="logo" height="60px" class="logo">
     <h3>Educating the Children</h3>
     <p>This is codequeen 14</p>
     <img src="person.jpg" alt="" class="photo">
-    <h3>Groot Jasmile</h3>
+    <h3>Camilla Jasmile</h3>
     <p>Digital Marketing Expert</p>
 </div>
 
